about section completed. Contact section styling almost complete. email functionality successfully added via emailJS API

--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -11,6 +11,8 @@
   background-color: rgb(243, 242, 242);
   display: flex;
   align-items: center;
+  position: sticky;
+  z-index: 2;
 }
 
 .p-circle {
@@ -23,4 +25,9 @@
 
 .p-img {
   width: 100%;
+  transition: all 10s ease;
+}
+
+.p:hover .p-img {
+  transform: translateY(-40%);
 }
