styling is contact form completed. added multiple display render functionality, added toggle dark and bright mode functionality via contextAPI, updated pictures and links for projects

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -79,3 +79,43 @@ button {
   padding: 15px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+  .c-wrapper {
+    flex-direction: column;
+    padding: 40px;
+  }
+
+  .c-title {
+    font-size: 30px;
+  }
+
+  .c-info-item {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+    font-weight: 300;
+    width: 100%;
+  }
+
+  .c-desc {
+    display: none;
+  }
+
+  form {
+    margin-top: 0px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  input {
+    width: 35%;
+    height: 40px;
+    margin: 10px;
+    margin-left: 0;
+  }
+
+  button {
+    margin-top: 10px;
+  }
+}
