--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -74,7 +74,7 @@
 
 .i-img {
   width: 90%;
-  height: 90%;
+  height: 95%;
   object-fit: cover;
   position: absolute;
   bottom: 0px;
@@ -89,4 +89,31 @@
   position: absolute;
   top: 0;
   right: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .i {
+    flex-direction: column;
+  }
+
+  .i-left-wrapper {
+    padding: 10px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    height: 100%;
+  }
+
+  .i-desc {
+    display: none;
+  }
+
+  .i-img {
+    width: 70%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
 }
