--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -21,7 +21,7 @@
   position: absolute;
   top: 50px;
   left: 50px;
-  background-color: blueviolet;
+  background-color: #333;
 }
 
 .a-card {
@@ -71,4 +71,29 @@
   font-weight: bold;
   color: #555;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 480px) {
+  .a {
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .a-left {
+    width: 100%;
+  }
+
+  .a-card {
+    height: 30vh;
+  }
+
+  .a-card.bg,
+  .a-award {
+    display: none;
+  }
+
+  .a-right {
+    padding: 20px;
+  }
 }
