--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -31,3 +31,10 @@
 .p:hover .p-img {
   transform: translateY(-40%);
 }
+
+@media screen and (max-width: 480px) {
+  .p {
+    width: 40%;
+    height: 20vh;
+  }
+}
